alignment resolved

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@ padding: 0;
   max-width: 400px;
   gap: 20px;
 }
+.language-container,
+.location-container{
+  margin: auto;
+}
 .signup-container > input{
   border: 1px solid rgba(209, 213, 219);
   height: 57px;
